best-practices/add-safe-to-evict/.chainsaw-test/resource-others.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod05
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod06
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      hostPath:
        path: "*"
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod07
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      emptyDir: {}
