best-practices/add-safe-to-evict/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod01
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: mydir
  volumes:
    - name: mydir
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod02
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      hostPath:
        path: "*"
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod03
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: mydir
  volumes:
    - name: mydir
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod04
spec:
  containers:
  - name: nginx
    image: nginx:1.14.1
    volumeMounts:
    - mountPath: /var/local/aaa
      name: myfile
  volumes:
    - name: myfile
      hostPath:
        path: "/foo"
